--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>What Up Coursera?!</title>
 </head>
-<body>
+<body> 02/09 I made my first webpage through html.
 <h1>What Up Coursera?!</h1>
 </body>
 </html>
+
