--- a/Firstsite/First Site.html
+++ b/Firstsite/First Site.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title> Coursera is dope!
+	<title> Coursera is dope!</title>
 </head>
 <body>
-Coursera is so DOPE! I just made my FIRST SITE!
+<p>Coursera is so DOPE! I just made my FIRST SITE!</p>
 </body>
 </html>
