--- a/Firstsite/First Site.html
+++ b/Firstsite/First Site.html
@@ -1,10 +1,13 @@
 <!doctype html>
 <html>
-<head>
+<header>
 	<meta charset="utf-8">
 	<title> Coursera is dope!</title>
-</head>
+</header>
+<h1>Main Heading to Page</h1>
+<article>Module 1 Achievments</article>
 <body>
-<p>Coursera is so DOPE! I just made my FIRST SITE!</p>
+<div>Coursera is so DOPE! I just made my FIRST SITE!</div>
+<nav>https://github.com/ZebTheHuman/Coursera-test/tree/main</nav>
 </body>
 </html>
