--- a/Firstsite/First Site.html
+++ b/Firstsite/First Site.html
@@ -7,8 +7,8 @@
 <h1>Main Heading to Page</h1>
 <article>Module 1 Achievments</article>
 <body>
-<div>Coursera is so DOPE! I just made my FIRST SITE!</div>
-<div> Found my portfolio here </div>
+<div>Coursera is pretty cool, my first day and I just made my first html site.</div>
+<div> Find my project portfolio here for this course here! </div>
 <nav>https://github.com/ZebTheHuman/Coursera-test/tree/main</nav>
 </body>
 </html>
