--- a/Firstsite/First Site.html
+++ b/Firstsite/First Site.html
@@ -8,7 +8,7 @@
 <article>Module 1 Achievments</article>
 <body>
 <div>Coursera is pretty cool, my first day and I just made my first html site.</div>
-<div> Find my project portfolio here for this course here! </div>
+<div> Find my project portfolio for this course here! </div>
 <nav>https://github.com/ZebTheHuman/Coursera-test/tree/main</nav>
 </body>
 </html>
