--- a/Firstsite/First Site.html
+++ b/Firstsite/First Site.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title> Coursera is dope!</title>
 </header>
-<h1>Main Heading to Page</h1>
+<h1>HTML, CSS, Javascript, and my Thoughts on them.</h1>
 <article>Module 1 Achievments</article>
 <body>
 <div>Coursera is pretty cool, my first day and I just made my first html site.</div>
