--- a/Firstsite/index.html
+++ b/Firstsite/index.html
@@ -4,11 +4,14 @@
 	<meta charset="utf-8">
 	<title> Coursera is dope!</title>
 </header>
-<h1>HTML, CSS, Javascript, and my Thoughts on them.</h1>
+<h1>HTML, CSS, Javascript, and my thoughts on them.</h1>
 <article>Module 1 Achievments</article>
 <body>
 <div>Coursera is pretty cool, my first day and I just made my first html site. 02/09</div>
 <div> Find my project portfolio for this course here! </div>
 <nav>https://github.com/ZebTheHuman/Coursera-test/tree/main</nav>
+<article>Module 2 Achievements</article>
+<article>Module 3 Achievements</article>
+<article>Module 4 Achievements</article>
 </body>
 </html>
