--- a/Firstsite/index.html
+++ b/Firstsite/index.html
@@ -3,6 +3,7 @@
 <header>
 	<meta charset="utf-8">
 	<title> Coursera is dope!</title>
+	<h1>HTML, CSS, Javascript, and my thoughts on them:</h1>
 </header>
 <h1>HTML, CSS, Javascript, and my thoughts on them:</h1>
 <article>*Module 1 Achievments*</article>
