--- a/Firstsite/index.html
+++ b/Firstsite/index.html
@@ -5,7 +5,7 @@
 	<title> Coursera is dope!</title>
 	<h1>HTML, CSS, Javascript, and my thoughts on them:</h1>
 </header>
-<h1>HTML, CSS, Javascript, and my thoughts on them:</h1>
+<h1>Lets Go!</h1>
 <article>*Module 1 Achievments*</article>
 <body>
 <div>Coursera is pretty cool, my first day and I just made my first html site. 02/09</div>
