--- a/Firstsite/index.html
+++ b/Firstsite/index.html
@@ -8,12 +8,16 @@
 <h1>Lets Go!</h1>
 <article>*Module 1 Achievments*</article>
 <body>
-<div>Coursera is pretty cool, my first day and I just made my first html site. 02/09</div>
-<div> Find my project portfolio for this course here! </div>
+<div>
+<ul>Coursera is pretty cool, my first day and I just made my first html site. 02/09</li>
+<ul>Find my project portfolio for this course here!</li>
+</div>
 <nav>https://github.com/ZebTheHuman/Coursera-test/tree/main</nav>
-<article>*Module 2 Achievements*</article>
-<article>*Module 3 Achievements*</article>
-<article>*Module 4 Achievements*</article>
+<ul>
+<li><article>*Module 2 Achievements*</article></li>
+<li><article>*Module 3 Achievements*</article></li>
+<li><article>*Module 4 Achievements*</article></li>
+</ul>
 <footer> You read this far your pretty cool!</footer>
 </body>
 </html>
