--- a/Firstsite/index.html
+++ b/Firstsite/index.html
@@ -6,9 +6,9 @@
 	<h1>HTML, CSS, Javascript, and my thoughts on them:</h1>
 </header>
 <h1>Lets Go!</h1>
-<article>*Module 1 Achievments*</article>
 <body>
 <div>
+<li><article>*Module 1 Achievments*</article></li>
 <ul>Coursera is pretty cool, my first day and I just made my first html site. 02/09</li>
 <ul>Find my project portfolio for this course here!</li>
 </div>
